--- a/sample-for-npm-app/app/Dockerfile
+++ b/sample-for-npm-app/app/Dockerfile
@@ -1,5 +1,11 @@
 FROM node:lts-alpine
 
+# timezone設定
+RUN apk --update add tzdata && \
+    cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
+    apk del tzdata && \
+    rm -rf /var/cache/apk/*
+
 EXPOSE 8080
 
 COPY run.sh /tmp/
