--- a/sample-for-npm-app/app/Dockerfile
+++ b/sample-for-npm-app/app/Dockerfile
@@ -6,6 +6,8 @@ RUN apk --update add tzdata && \
     apk del tzdata && \
     rm -rf /var/cache/apk/*
 
+RUN apk add openssh vim
+
 EXPOSE 8080
 
 COPY run.sh /tmp/
