sshログインを可能にするように修正

--- a/sample-for-flask-app/flask/Dockerfile
+++ b/sample-for-flask-app/flask/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.5-alpine
 
+RUN apk --update add --no-cache openssh bash \
+    && sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
+    && echo "root:root" | chpasswd
+
 RUN pip install pipenv
 
 COPY run.sh /tmp/run.sh
